<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_hello"
        />
    <Button
        android:id="@+id/bt_say_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/say_hello"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        />
    <Button
        android:id="@+id/bt_static_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/static_proxy"
        app:layout_constraintTop_toBottomOf="@id/bt_say_hello"
        />

    <Button
        android:id="@+id/bt_dynamic_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_proxy"
        app:layout_constraintTop_toBottomOf="@id/bt_static_proxy"
        />

    <Button
        android:id="@+id/bt_activity_hook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_hook"
        app:layout_constraintTop_toBottomOf="@id/bt_dynamic_proxy"
        />
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/say_hello"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>